# firefucks.py

./: .gitignore  .gitlab-ci.yml  Code_Of_Conduct.md  ReadMe.md  pyproject.toml  snippet.js
.ci/: aptPackagesToInstall.txt  pythonPackagesToInstallFromGit.txt
.github/: .templateMarker
.github/workflows/: CI.yml
firefucks/: __init__.py  __main__.py  constants.py  json.py  patcher.py  preset.json
tests/: omni.ja  tests.py
